test/conformance/chainsaw/validate/clusterpolicy/cornercases/check-message-upon-resource-failure(deprecated)/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asdfhl
  labels:
    app-type: corp
  annotations:
    cloud.platformzero.com/serviceClass: "xl2"
